add project with Maven add package from previous lesson (test). and try it run in parallel

--- a/java/myTestMaven/pom.xml
+++ b/java/myTestMaven/pom.xml
@@ -25,7 +25,7 @@
            <suiteXmlFile>testng.xml</suiteXmlFile>
            <suiteXmlFile>suites-test-testng.xml</suiteXmlFile>
             -->
-                        <suiteXmlFile>firstParallel.xml</suiteXmlFile>
+                        <suiteXmlFile>test/java/oldTestFromPreviousCourse/${test.xml}</suiteXmlFile>
        </suiteXmlFiles>
    </configuration>
 </plugin>
