--- a/java/myTestMaven/pom.xml
+++ b/java/myTestMaven/pom.xml
@@ -40,6 +40,15 @@
             </plugin>
         </plugins>
     </build>
+    <reporting>
+        <plugins>
+            <plugin>
+                <groupId> org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-report-plugin</artifactId>
+                <version>2.5</version>
+            </plugin>
+        </plugins>
+    </reporting>
     <dependencies>
         <!-- Dependency libraries to include for compilation -->
         <dependency>
