--- a/java/erise/pom.xml
+++ b/java/erise/pom.xml
@@ -7,6 +7,65 @@
     <groupId>GroupIDfirst</groupId>
     <artifactId>ArtifactIDfirst</artifactId>
     <version>1.0-SNAPSHOT</version>
-
-
+    <build>
+        <sourceDirectory>src</sourceDirectory>
+        <!-- folder for find tests and src-->
+        <testSourceDirectory>src/</testSourceDirectory>
+        <plugins>
+            <plugin>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.1</version>
+                <configuration>
+                    <!-- Java Version-->
+                    <source>1.8</source>
+                    <target>1.8</target>
+                </configuration>
+            </plugin>
+            <plugin>
+                <!-- Plugin for testNG-->
+                <groupId>org.apche.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.18.1</version>
+                <configuration>
+                    <systemPropertyVariables>
+                        <!--System variables-->
+                        <platform>live</platform>
+                        <suite.name>MySuite</suite.name>
+                        <data.provider>all</data.provider>
+                        <parallel>false</parallel>
+                        <test.class>null</test.class>
+                        <threads>1</threads>
+                    </systemPropertyVariables>
+                    <!-- variables for set xml suite-->
+                    <suiteXmlFiles>
+                        <suiteXmlFile>${project.basedir}/runconfigs/${test.xml}</suiteXmlFile>
+                    </suiteXmlFiles>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+    <reporting>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <!-- Report plugin for maven-->
+                <artifactId>maven-surefire-report-plugin</artifactId>
+                <version>2.5</version>
+            </plugin>
+        </plugins>
+    </reporting>
+    <repositories>
+        <!-- add another repositories (from other resources)-->
+        <repository>
+            <id>quick-json-repo</id>
+            <url>https://raw.github.com/mazentheamazin/quick-json/mvn-repo</url>
+        </repository>
+    </repositories>
+    <dependencies>
+        <dependency>
+            <groupId>org.testng</groupId>
+            <artifactId>testng</artifactId>
+            <version>6.3.1</version>
+        </dependency>
+    </dependencies>
 </project>
