add to git ignore core.iml

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@
 /java/yFain/.idea
 /java/myTestMaven/.idea
 /java/myTestMaven/target/
+/java/myTestMaven/myTestMaven.iml
 
 /java/erise/bin/
 /java/erise/target/
