--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,6 @@
 /java/yFain/.idea
 /java/myTestMaven/.idea
 /java/myTestMaven/target/
-
 /java/erise/bin/
 /java/erise/target/
 /java/erise/runconfigs/*.xml
@@ -15,3 +14,5 @@
 /java/erise/.settings/*
 /java/erise/temp/
 /java/erise/test-output/
+/java/erise/ArtifactIDfirst.iml
+/java/erise/src/core/core.iml
