modified .gitignore. delete mytestmaven.iml

--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,8 @@
 /java/erise/test-output/
 /java/erise/ArtifactIDfirst.iml
 /java/erise/src/core/core.iml
+
+/java/myTestMaven/myTestMaven.iml
+/java/yFain/yFain.iml
+/java/yFain/fain.iml
+
