--- a/java/erise/pom.xml
+++ b/java/erise/pom.xml
@@ -23,9 +23,9 @@
             </plugin>
             <plugin>
                 <!-- Plugin for testNG-->
-                <groupId>org.apche.maven.plugins</groupId>
+                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.18.1</version>
+                <version>2.14.1</version>
                 <configuration>
                     <systemPropertyVariables>
                         <!--System variables-->
