Add to gitignore java/myFirstTestMaven/myFirstTestMaven.iml

--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,7 @@
 /java/myFirstTestMaven/temp/
 /java/myFirstTestMaven/test-output/
 /java/myFirstTestMaven/src/core/core.iml
+/java/myFirstTestMaven/myFirstTestMaven.iml
 
 /java/erise/bin/
 /java/erise/target/
