--- a/java/myFirstTestMaven/pom.xml
+++ b/java/myFirstTestMaven/pom.xml
@@ -3,43 +3,123 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-
     <groupId>myFirstMavenTest</groupId>
     <artifactId>myFirstMavenTestID</artifactId>
     <version>1.0-SNAPSHOT</version>
     <name>sapmle-maven-build</name>
 
     <build>
-        <!--Source Directory configuration-->
+        <!-- Source directory configuration -->
         <sourceDirectory>src</sourceDirectory>
         <plugins>
-            <!--Following plugin executes the testng tests-->
+            <!-- Following plugin executes the testng tests -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.14.1</version>
                 <configuration>
-                    <!--Suite testng xml file to consider for test execution-->
+                    <!-- Suite testng xml file to consider for test execution -->
+                    <suiteXmlFiles>
+                        <!--
+                       <suiteXmlFile>testng.xml</suiteXmlFile>
+                       <suiteXmlFile>suites-test-testng.xml</suiteXmlFile>
+                        -->
+                        <suiteXmlFile>test/java/oldTestFromPreviousCourse/${test.xml}</suiteXmlFile>
+                    </suiteXmlFiles>
+                </configuration>
+            </plugin>
+            <!-- Compiler plugin configures the java version to be used for compiling
+               the code -->
+            <plugin>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+    <reporting>
+        <plugins>
+            <plugin>
+                <groupId> org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-report-plugin</artifactId>
+                <version>2.5</version>
+            </plugin>
+        </plugins>
+    </reporting>
+    <dependencies>
+        <!-- Dependency libraries to include for compilation -->
+        <dependency>
+            <groupId>org.testng</groupId>
+            <artifactId>testng</artifactId>
+            <version>6.3.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.seleniumhq.selenium</groupId>
+            <artifactId>selenium-java</artifactId>
+            <version>2.48.2</version>
+        </dependency>
+    </dependencies>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<!--
+
+
+
+    <build>
+        &lt;!&ndash;Source Directory configuration&ndash;&gt;
+        <sourceDirectory>src</sourceDirectory>
+        <plugins>
+            &lt;!&ndash;Following plugin executes the testng tests&ndash;&gt;
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.14.1</version>
+                <configuration>
+                    &lt;!&ndash;Suite testng xml file to consider for test execution&ndash;&gt;
                     <suiteXmlFile>
                         <suiteXmlFile>testng.xml</suiteXmlFile>
                         <suiteXmlFile>suites-test-testng.xml</suiteXmlFile>
                     </suiteXmlFile>
                 </configuration>
             </plugin>
-            <!--Compiler plugin confugures the java version to be used for compiling the code-->
-            <plugin>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <configuration>
-                    <source>1.6</source>
-                    <target>1.6</target>
-                </configuration>
-            </plugin>
+            &lt;!&ndash;Compiler plugin confugures the java version to be used for compiling the code&ndash;&gt;
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
-                    <source>1.7</source>
-                    <target>1.7</target>
+                    <source>1.6</source>
+                    <target>1.6</target>
                 </configuration>
             </plugin>
         </plugins>
@@ -47,9 +127,14 @@
 
     <dependencies>
         <dependency>
+            <groupId>org.seleniumhq.selenium</groupId>
+            <artifactId>selenium-java</artifactId>
+            <version>2.48.2</version>
+        </dependency>
+        <dependency>
             <groupId>org.testng</groupId>
             <artifactId>testng</artifactId>
             <version>6.3.1</version>
         </dependency>
-    </dependencies>
+    </dependencies>-->
 </project>
