--- a/java/myFirstTestMaven/pom.xml
+++ b/java/myFirstTestMaven/pom.xml
@@ -11,6 +11,7 @@
     <build>
         <!-- Source directory configuration -->
         <sourceDirectory>src</sourceDirectory>
+        <testSourceDirectory>/</testSourceDirectory>
         <plugins>
             <!-- Following plugin executes the testng tests -->
             <plugin>
@@ -20,11 +21,8 @@
                 <configuration>
                     <!-- Suite testng xml file to consider for test execution -->
                     <suiteXmlFiles>
-                        <!--
-                       <suiteXmlFile>testng.xml</suiteXmlFile>
-                       <suiteXmlFile>suites-test-testng.xml</suiteXmlFile>
-                        -->
-                        <suiteXmlFile>test/java/oldTestFromPreviousCourse/${test.xml}</suiteXmlFile>
+                        <suiteXmlFile>/test/java/xmlTest/${test.xml}</suiteXmlFile>
+                        <suiteXmlFile>suites-test-testng.xml</suiteXmlFile>
                     </suiteXmlFiles>
                 </configuration>
             </plugin>
