--- a/java/myFirstTestMaven/pom.xml
+++ b/java/myFirstTestMaven/pom.xml
@@ -3,42 +3,45 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+
     <groupId>myFirstMavenTest</groupId>
     <artifactId>myFirstMavenTestID</artifactId>
     <version>1.0-SNAPSHOT</version>
     <name>sapmle-maven-build</name>
 
     <build>
-        <!-- Source directory configuration -->
-        <sourceDirectory>src/</sourceDirectory>
+
+        <!--Source Directory configuration-->
+        <sourceDirectory>src</sourceDirectory>
         <testSourceDirectory>/</testSourceDirectory>
+
+
         <plugins>
-            <!-- Following plugin executes the testng tests -->
+            <!--Following plugin executes the testng tests-->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.14.1</version>
                 <configuration>
-                    <!-- Suite testng xml file to consider for test execution -->
-                    <suiteXmlFiles>
+                    <!--Suite testng xml file to consider for test execution-->
+                    <suiteXmlFile>
                         <suiteXmlFile>/test/java/xmlTest/${test.xml}</suiteXmlFile>
-                        <!--<suiteXmlFile>suites-test-testng.xml</suiteXmlFile>-->
-                    </suiteXmlFiles>
+                    </suiteXmlFile>
                 </configuration>
             </plugin>
-            <!-- Compiler plugin configures the java version to be used for compiling
-               the code -->
+            <!--Compiler plugin confugures the java version to be used for compiling the code-->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>2.3.2</version>
+                <version>3.5</version>
                 <configuration>
-                    <source>1.7</source>
-                    <target>1.7</target>
+                    <source>1.8</source>
+                    <target>1.8</target>
                 </configuration>
             </plugin>
         </plugins>
     </build>
+
     <reporting>
         <plugins>
             <plugin>
@@ -48,8 +51,8 @@
             </plugin>
         </plugins>
     </reporting>
+
     <dependencies>
-        <!-- Dependency libraries to include for compilation -->
         <dependency>
             <groupId>org.testng</groupId>
             <artifactId>testng</artifactId>
@@ -59,11 +62,6 @@
             <groupId>org.seleniumhq.selenium</groupId>
             <artifactId>selenium-java</artifactId>
             <version>2.48.2</version>
-        </dependency>
-        <dependency>
-            <groupId>org.jetbrains</groupId>
-            <artifactId>annotations-java5</artifactId>
-            <version>15.0</version>
         </dependency>
     </dependencies>
 </project>
