--- a/java/myFirstTestMaven/pom.xml
+++ b/java/myFirstTestMaven/pom.xml
@@ -21,22 +21,23 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.14.1</version>
+                <version>2.18.1</version>
                 <configuration>
                     <!--Suite testng xml file to consider for test execution-->
-                    <suiteXmlFile>
-                        <suiteXmlFile>/test/java/xmlTest/${test.xml}</suiteXmlFile>
-                    </suiteXmlFile>
+                    <suiteXmlFiles>
+                        <suiteXmlFile>${project.basedir}/test/java/xmlTest/${test.xml}</suiteXmlFile>
+                    </suiteXmlFiles>
                 </configuration>
             </plugin>
             <!--Compiler plugin confugures the java version to be used for compiling the code-->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.5</version>
+                <version>3.1</version>
                 <configuration>
                     <source>1.8</source>
                     <target>1.8</target>
+                    <encoding>UTF-8</encoding>
                 </configuration>
             </plugin>
         </plugins>
