--- a/java/myFirstTestMaven/pom.xml
+++ b/java/myFirstTestMaven/pom.xml
@@ -13,7 +13,7 @@
 
         <!--Source Directory configuration-->
         <sourceDirectory>src</sourceDirectory>
-        <testSourceDirectory>/</testSourceDirectory>
+        <testSourceDirectory>./</testSourceDirectory>
 
 
         <plugins>
@@ -21,11 +21,11 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.18.1</version>
+                <version>2.14</version>
                 <configuration>
                     <!--Suite testng xml file to consider for test execution-->
                     <suiteXmlFiles>
-                        <suiteXmlFile>${project.basedir}/test/java/xmlTest/${test.xml}</suiteXmlFile>
+                        <suiteXmlFile>${project.basedir}/src/test/java/xmlTest/${test}</suiteXmlFile>
                     </suiteXmlFiles>
                 </configuration>
             </plugin>
@@ -33,7 +33,9 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.1</version>
+                <!--
+                                <version>3.1</version>
+                -->
                 <configuration>
                     <source>1.8</source>
                     <target>1.8</target>
@@ -67,6 +69,8 @@
     </dependencies>
 </project>
 
-<!--
-        mvn -Dtest=firstTestRun.xml clean test
--->
+        <!--
+                mvn -Dtest=mobRegTest clean test
+                mvn -Dtest.xml=firstTestRun.xml clean test
+                mvn clean install -U
+        -->
