create class for pp/ add folder to static data for pp(card etc) add this data to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,5 @@
 /java/erise/temp/
 /java/erise/test-output/
 /java/erise/src/core/core.iml
+/java/erise/erise.iml
+/java/erise/src/core/constans/paymentDatas
